--- a/scss/standard.scss
+++ b/scss/standard.scss
@@ -356,7 +356,6 @@ body:not(.pagelayout-maintenance) #page-wrapper {
 }
 #region-main {
     float: none;
-    padding: 0 15px 15px;
     border-radius: 10px;
     overflow-x: visible;
     .mform:not(.unresponsive) .fitem .fitemtitle label {
@@ -549,11 +548,6 @@ form#coursesearch {
             text-indent: -9999em;
             text-transform: capitalize;
         }
-    }
-}
-body {
-    &:not(.path-admin) #page.drawers {
-        padding: 0;
     }
 }
 .path-admin {
@@ -1214,7 +1208,6 @@ div.backup-section + form {
 
 #page.drawers {
     height: auto;
-    padding: 0;
     margin-top: 20px;
     .drawer-right-toggle {
         margin-right: 0;
@@ -1236,8 +1229,8 @@ div.backup-section + form {
     display: none;
 }
 .theme-container #page.drawers .main-inner {
-    max-width: $modal-xl;
     margin-top: 0;
+    width: -webkit-fill-available !important;
 }
 .default-container {
     /* &:not(.path-admin):not(#page-course-management):not(#page-course-view-participants) {
