--- a/scss/login.scss
+++ b/scss/login.scss
@@ -31,3 +31,7 @@
         margin-top: 50px;
     }
 }
+
+.login-container h2.login-heading, #guestlogin, .login-divider, .loginform .d-flex {
+    display: none !important;
+}
