--- a/templates/course_blocks.mustache
+++ b/templates/course_blocks.mustache
@@ -91,3 +91,38 @@
         </div>
     {{/blockisempty}}
 {{/promatedcourse}}
+
+{{! Overview }}
+{{#overview}}
+    <br/><br/><br/>
+    <div class="container mt-6">
+        <div>
+            <h2 class="text-dark"><bold>Hi Admin,<bold></h2>   
+            <h3 class="text-dark">Platform Overview</h3>   
+        </div>
+        <div class="d-flex mt-3">
+            <div class="bg-light border p-3 w-25 rounded">
+                <div>Active Schools</div>
+                <div class="">50</div>
+            </div>
+            <div class="bg-light border p-3 w-25 ml-3 rounded">
+                <div>Enrolled Students</div>
+                <div class="">4000</div>
+            </div>
+            <div class="bg-light border p-3 w-25 ml-3 rounded">
+                <div>Enrolled Teachers</div>
+                <div class="">500</div>
+            </div>
+            <div class="bg-light border p-3 w-25 ml-3 rounded">
+                <div>Active Surveys</div>
+                <div class="">20</div>
+            </div>
+        </div>
+    </div>
+{{/overview}}
+
+{{! Course Insights }}
+{{#insights}}
+    <div class="container">
+    </div>
+{{/insights}}
