--- a/scss/frontpage.scss
+++ b/scss/frontpage.scss
@@ -101,7 +101,7 @@
     #site-news-forum {
         background-color: $white;
     }
-    .custom-alert-block {
+    .custom-block {
         max-width: $modal-xl;
         width: 100%;
         margin: 15px auto 15px;
