--- a/templates/course_blocks.mustache
+++ b/templates/course_blocks.mustache
@@ -97,7 +97,7 @@
     <br/><br/><br/>
     <div class="container mt-6">
         <div>
-            <h2 class="text-dark"><bold>Hi {{username}},<bold></h2>   
+            <h2 class="text-dark fw-bold"><bold>Hi {{username}},<bold></h2>   
             <h3 class="text-dark">Platform Overview</h3>   
         </div>
         <div class="d-flex mt-3">
