fix(*): update the dashboard as per the design

--- a/scss/course.scss
+++ b/scss/course.scss
@@ -127,3 +127,25 @@
 /* .path-grade-report-grader.hasstickyfooter .gradeparent tr.lastrow {
     bottom: 0;
 } */
+
+.user-name {
+    font-weight: bold;
+    font-size: 30px;
+}
+
+.platform-overview {
+    font-size: 22px;
+    font-weight: 400;
+}
+
+.prominent-insights {
+    font-size: 22px;
+    font-weight: 400;
+    margin: 0px;
+}
+
+.prominent-description {
+    font-size: 14px;
+    font-weight: 400;
+    color: #626262;
+}
