--- a/templates/course_blocks.mustache
+++ b/templates/course_blocks.mustache
@@ -95,10 +95,10 @@
 {{! Overview }}
 {{#overview}}
     <br/><br/><br/>
-    <div class="container mt-6">
+    <div class="mx-5 mt-6">
         <div>
-            <h2 class="text-dark fw-bold"><bold>Hi {{username}},<bold></h2>   
-            <h3 class="text-dark">Platform Overview</h3>   
+            <h2 class="text-dark fw-bold user-name">Hi {{username}},</h2>   
+            <p class="text-dark platform-overview">Platform Overview</p>   
         </div>
         <div class="d-flex mt-3">
             <div class="bg-light border p-3 w-25 rounded">
@@ -127,7 +127,18 @@
 
 {{! Course Insights }}
 {{#insights}}
-    <div class="container mt-6 border border-secondary rounded p-5">
-        {{{ chart }}}
+    <div class="mx-5 mt-6">
+        <div>
+            <p class="text-dark prominent-insights">Your Prominent Insights</p>   
+            <p class="text-dark prominent-description">Based on the responses collected from surveys filled by you</p>   
+        </div>
+        <div class="d-flex">
+            <div class="mt-4 border border-secondary rounded py-2 mx-4">
+                {{{ chart }}}
+            </div>
+            <div class="mt-4 border border-secondary rounded py-2">
+                {{{ horizontalbarchart }}}
+            </div>
+        </div>
     </div>
 {{/insights}}
