--- a/templates/course_blocks.mustache
+++ b/templates/course_blocks.mustache
@@ -95,7 +95,7 @@
 {{! Overview }}
 {{#overview}}
     <br/><br/><br/>
-    <div class="mx-5 mt-6">
+    <div class="overview mt-6">
         <div>
             <h2 class="text-dark fw-bold user-name">Hi {{username}},</h2>   
             <p class="text-dark platform-overview">Platform Overview</p>   
@@ -127,9 +127,9 @@
 
 {{! Course Insights }}
 {{#insights}}
-    <div class="mx-5 mt-6">
+    <div class="prominent-insights mt-6">
         <div>
-            <p class="text-dark prominent-insights">Your Prominent Insights</p>   
+            <p class="text-dark prominent-insights-title">Your Prominent Insights</p>   
             <p class="text-dark prominent-description">Based on the responses collected from surveys filled by you</p>   
         </div>
         <div class="d-flex">
