--- a/templates/course_blocks.mustache
+++ b/templates/course_blocks.mustache
@@ -94,7 +94,6 @@
 
 {{! Overview }}
 {{#overview}}
-    <br/><br/><br/>
     <div class="overview mt-6">
         <div>
             <h2 class="text-dark fw-bold user-name">Hi {{username}},</h2>   
@@ -124,6 +123,18 @@
         </div>
     </div>
 {{/overview}}
+
+{{! Quick Actions }}
+{{#quickaction}}
+    <div class="quick-action mt-6">
+        <p class="text-dark platform-overview mb-2">Quick Actions</p>
+        <div class="d-flex">
+            <a class="create-custom-button mt-3 mr-3" href="{{createnewschool}}">{{{plusicon}}} Add New School</a>
+            <a class="create-custom-button mt-3 mr-3" href="{{createnewcourseurl}}">{{{plusicon}}} Create new course</a>
+            <a class="create-custom-button mt-3 mr-3" href="{{createsurveyurl}}">{{{plusicon}}} Create new survey</a>
+        </div>
+    </div>
+{{/quickaction}}
 
 {{! Course Insights }}
 {{#insights}}
