fix(*): update the chart style

--- a/templates/course_blocks.mustache
+++ b/templates/course_blocks.mustache
@@ -136,14 +136,14 @@
 {{#insights}}
     <div class="prominent-insights mt-6">
         <div>
-            <p class="text-dark prominent-insights-title">Your Prominent Insights</p>   
-            <p class="text-dark prominent-description">Based on the responses collected from surveys filled by you</p>   
+            <p class="text-dark prominent-insights-title">Prominent Insights</p>   
+            <p class="text-dark prominent-description m-0">Based on the responses collected from surveys filled by you</p>   
         </div>
-        <div class="d-flex">
-            <div class="mt-4 border border-secondary rounded py-2 mx-4">
+        <div class="d-flex justify-content-end">
+            <div class="chart mt-4 border border-secondary rounded mx-4">
                 {{{ chart }}}
             </div>
-            <div class="mt-4 border border-secondary rounded py-2">
+            <div class="chart mt-4 border border-secondary rounded">
                 {{{ horizontalbarchart }}}
             </div>
         </div>
