--- a/templates/course_blocks.mustache
+++ b/templates/course_blocks.mustache
@@ -140,10 +140,10 @@
             <p class="text-dark prominent-description m-0">Based on the responses collected from surveys filled by you</p>   
         </div>
         <div class="d-flex justify-content-end">
-            <div class="chart mt-4 border border-secondary rounded mx-4">
+            <div class="chart mt-4 border border-secondary rounded mx-4 py-3"">
                 {{{ chart }}}
             </div>
-            <div class="chart mt-4 border border-secondary rounded">
+            <div class="chart mt-4 border border-secondary rounded py-3"">
                 {{{ horizontalbarchart }}}
             </div>
         </div>
