create course and mooc

--- a/scss/footer.scss
+++ b/scss/footer.scss
@@ -256,4 +256,8 @@
         }
     }
 }
+
+#backToTop, [data-region="footer-container-popover"] {
+    display: none !important;
+}
 /* End of Footer */
