--- a/scss/course.scss
+++ b/scss/course.scss
@@ -125,9 +125,9 @@
     #page-header, .secondary-navigation {
         display: none !important;
     }
-    #fitem_id_category {
-        display: none !important;
-    }
+    // #fitem_id_category {
+    //     display: none !important;
+    // }
 }
 
 /* .path-grade-report-grader.hasstickyfooter .gradeparent tr.lastrow {
