--- a/templates/course_blocks.mustache
+++ b/templates/course_blocks.mustache
@@ -135,17 +135,23 @@
 {{! Course Insights }}
 {{#insights}}
     <div class="prominent-insights mt-6">
-        <div>
-            <p class="text-dark prominent-insights-title">Prominent Insights</p>   
-            <p class="text-dark prominent-description m-0">Based on the responses collected from surveys filled by you</p>   
+        <div class="d-flex justify-content-between">
+            <div>
+                <p class="text-dark prominent-insights-title">Prominent Insights</p>   
+                <p class="text-dark prominent-description m-0">Based on the responses collected from surveys filled by you</p>   
+            </div>
+            <div>
+                {{{ surveycatgories }}}
+            </div>
         </div>
-        <div class="d-flex justify-content-end">
-            <div class="chart mt-4 border border-secondary rounded mx-4 py-3"">
-                {{{ chart }}}
-            </div>
-            <div class="chart mt-4 border border-secondary rounded py-3"">
-                {{{ horizontalbarchart }}}
-            </div>
+            <div class="d-flex justify-content-end">
+                <div class="mt-4">
+                    {{{ chart }}}
+                </div>
+                <div class="mt-4">
+                    {{{ horizontalbarchart }}}
+                </div>
+        </div>
         </div>
     </div>
 {{/insights}}
