--- a/templates/course_blocks.mustache
+++ b/templates/course_blocks.mustache
@@ -144,14 +144,14 @@
                 {{{ surveycatgories }}}
             </div>
         </div>
-            <div class="d-flex justify-content-end">
-                <div class="mt-4">
+            <div class="chart mt-4 border border-secondary rounded mx-4 py-3">
+                <div class="mt-4 d-flex justify-content-center flex-wrap">
                     {{{ chart }}}
                 </div>
-                <div class="mt-4">
-                    {{{ horizontalbarchart }}}
-                </div>
-        </div>
+            </div>
+            <div class="chart mt-4 border border-secondary rounded py-3">
+                {{{ horizontalbarchart }}}
+            </div>
         </div>
     </div>
 {{/insights}}
