--- a/templates/course_blocks.mustache
+++ b/templates/course_blocks.mustache
@@ -144,7 +144,7 @@
                 {{{ surveycatgories }}}
             </div>
         </div>
-            <div class="chart mt-4 border border-secondary rounded mx-2 py-3">
+            <div class="chart mt-4 border border-secondary rounded py-3">
                 <div class="mt-4 d-flex justify-content-center flex-wrap">
                     {{{ chart }}}
                 </div>
