--- a/templates/course_blocks.mustache
+++ b/templates/course_blocks.mustache
@@ -145,7 +145,7 @@
             </div>
         </div>
             <div class="chart mt-4 border border-secondary rounded py-3">
-                <div class="mt-4 d-flex justify-content-center flex-wrap">
+                <div class="mt-4 d-flex flex-wrap pie-chart-container">
                     {{{ chart }}}
                 </div>
             </div>
