--- a/templates/course_blocks.mustache
+++ b/templates/course_blocks.mustache
@@ -149,7 +149,7 @@
                     {{{ chart }}}
                 </div>
             </div>
-            <div class="chart mt-4 border border-secondary rounded py-3">
+            <div class="horizontalbar-chart mt-4 border border-secondary rounded py-3">
                 {{{ horizontalbarchart }}}
             </div>
         </div>
