--- a/templates/course_blocks.mustache
+++ b/templates/course_blocks.mustache
@@ -140,8 +140,9 @@
                 <p class="text-dark prominent-insights-title">Prominent Insights</p>   
                 <p class="text-dark prominent-description m-0">Based on the responses collected from surveys filled by you</p>   
             </div>
-            <div>
+            <div class="d-flex">
                 {{{ surveycatgories }}}
+                {{{ insightstypes }}}
             </div>
         </div>
             <div class="chart mt-4 border border-secondary rounded py-3">
