--- a/templates/course_blocks.mustache
+++ b/templates/course_blocks.mustache
@@ -140,18 +140,19 @@
                 <p class="text-dark prominent-insights-title">Prominent Insights</p>   
                 <p class="text-dark prominent-description m-0">Based on the responses collected from surveys filled by you</p>   
             </div>
-            <div class="d-flex">
+            <div class="d-flex chart-type-select">
                 {{{ surveycatgories }}}
                 {{{ insightstypes }}}
             </div>
         </div>
             <div class="chart mt-4 border border-secondary rounded py-3">
+                <div class="d-flex align-items-center pie-chart-header">
+                    <h5 class="text-dark overall-insights-text">Overall Insights</h5>
+                    {{{ piechartlabels }}}
+                </div>
                 <div class="mt-4 d-flex flex-wrap pie-chart-container">
                     {{{ chart }}}
                 </div>
-            </div>
-            <div class="horizontalbar-chart mt-4 border border-secondary rounded py-3">
-                {{{ horizontalbarchart }}}
             </div>
         </div>
     </div>
