fix(*): dashboard pie chart dyanamic

--- a/scss/standard.scss
+++ b/scss/standard.scss
@@ -1892,3 +1892,9 @@ select {
     margin-left: 35px;
     margin-top: 6px;
 }
+
+.no-chart-found {
+    width: 100%;
+    text-align: center;
+    margin-inline: 20px;
+}
