--- a/templates/course_blocks.mustache
+++ b/templates/course_blocks.mustache
@@ -66,9 +66,15 @@
     <div class="quick-action mt-6">
         <p class="text-dark platform-overview mb-2">Quick Actions</p>
         <div class="d-flex">
+            {{#cancreatenewschool}}
             <a class="create-custom-button mt-3 mr-3" href="{{createnewschool}}">{{{plusicon}}} Add New School</a>
+            {{/cancreatenewschool}}
+            {{#cancreatenewcourse}}
             <a class="create-custom-button mt-3 mr-3" href="{{createnewcourseurl}}">{{{plusicon}}} Create new course</a>
+            {{/cancreatenewcourse}}
+            {{#cancreatenewsurvey}}
             <a class="create-custom-button mt-3 mr-3" href="{{createsurveyurl}}">{{{plusicon}}} Create new survey</a>
+            {{/cancreatenewsurvey}}
         </div>
     </div>
 {{/quickaction}}
@@ -79,7 +85,12 @@
         <div class="d-flex justify-content-between">
             <div>
                 <p class="text-dark prominent-insights-title">Prominent Insights</p>   
+                {{#isprincipal}}
+                <p class="text-dark prominent-description m-0">Based on the responses collected from surveys distributed in your school</p>   
+                {{/isprincipal}}
+                {{^isprincipal}}
                 <p class="text-dark prominent-description m-0">Based on the responses collected from surveys filled by you</p>   
+                {{/isprincipal}}
             </div>
             <div class="d-flex chart-type-select">
                 {{{ insightstypes }}}
