hide iomad dashboard

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,3 +1,7 @@
 #id_manageremails, #id_companyadvanced, #id_userdefaults, #id_appearance, #id_certificatedesign {
     display: none !important;
 }
+
+[data-key="ioaddashboardnode"] {
+    display: none !important;
+}
