--- a/scss/main.scss
+++ b/scss/main.scss
@@ -5,3 +5,9 @@
 [data-key="ioaddashboardnode"] {
     display: none !important;
 }
+
+#page-site-index > #page-wrapper{
+    .custom-alert-block {
+        display: none !important;
+    }
+}
