--- a/scss/standard.scss
+++ b/scss/standard.scss
@@ -1882,3 +1882,8 @@ select {
     text-align: center;
     margin-inline: 20px;
 }
+
+.grade-multiselect {
+    height: 118px !important;
+    max-width: 250px !important;
+}
