assign course to grades

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -17,6 +17,11 @@
     max-width: 250px !important;
 }
 
+.grade-multiselect-lg {
+    height: 250px !important;
+    max-width: 250px !important;
+}
+
 .school-multiselect {
     height: 200px !important;
     max-width: 300px !important;
