course edit page access

--- a/scss/frontpage.scss
+++ b/scss/frontpage.scss
@@ -2,6 +2,7 @@
     background-image: none;
     .course-content {
         max-width: $modal-xl;
+        padding: 20px !important;
         margin: 0 auto;
         .topics li.section {
             border: 0;
