--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,3 +1,10 @@
+#page-site-index .course-content {
+    display: none !important;
+}
+#page-site-index .buttons {
+    display: none !important;
+}
+
 #id_manageremails, #id_companyadvanced, #id_userdefaults, #id_appearance, #id_certificatedesign {
     display: none !important;
 }
